@@ -2,7 +2,7 @@
  OmegaT 4.1.2 update 1
 ----------------------------------------------------------------------
   3 Enhancements
-  1 Bug fix
+  2 Bug fixes
   1 Localisation update
 ----------------------------------------------------------------------
 4.1.2 update 1 vs 4.1.2
@@ -23,6 +23,9 @@ in the table
   Bug fixes:
 
   - An error occurred when a PO file was used in /tm/auto
+
+  - Repository mapping lost when downloading team project
+  https://sourceforge.net/p/omegat/bugs/859/
 
   Localisation Updates:
 
